# examples

./: .gitignore  .mise.toml  .pre-commit-config.yaml  DOCS_DEPLOYMENT.md  README.md  main.py  pyproject.toml  test_examples.py
.prefect/: memo_store.toml  prefect.db-shm  prefect.db-wal
01_getting_started/: 01_hello_world.py
02_sdk_concepts/: 01_tasks.py  02_retries.py  03_on_fail_success.py  04_async_concurrency.py  05_task_runner_concurrency.py  06_transactions.py
apps/atproto-dashboard/: .env.example  .gitignore  README.md  pyproject.toml
apps/atproto-dashboard/dbt_project/: .user.yml  dbt_project.yml  profiles.yml
apps/atproto-dashboard/dbt_project/models/: sources.yml
apps/atproto-dashboard/dbt_project/models/analysis/: daily_activity.sql  top_posts.sql
apps/atproto-dashboard/dbt_project/models/staging/: stg_feeds.sql  stg_profiles.sql
apps/atproto-dashboard/src/atproto_dashboard/: __init__.py  assets.py  dashboard.py  dbt_flow.py  main.py  pipeline.py  query_dashboard.py  settings.py
apps/atproto-dashboard/src/atproto_dashboard/resources/: atproto_client.py
apps/background-tasks/: Dockerfile  README.md  compose.yaml  pyproject.toml
apps/background-tasks/src/foo/: api.py  task.py
apps/background-tasks/src/foo/_internal/: __init__.py  _fastapi.py  _prefect.py
apps/background-tasks/src/foo/static/: style.css
apps/background-tasks/src/foo/templates/: base.html  index.html
apps/background-tasks/src/foo/templates/partials/: result.html  task_status.html
basics/: context.py  retry-after.py
client/: update-flow-run-tags.py
debug/: force-out-of-memory.py
deploy/: deploy-docker-existing-image.py  deploy-docker-in-docker.py  deploy-many.py  deploy_docker_existing_image.py  deploy_docker_in_docker.py  deploy_many.py  source-docker.py  source_docker.py  source_github.py  source_local.py
docs/: hello_world.mdx  index.mdx  run_api_sourced_etl.mdx  run_dbt_with_prefect.mdx  simple_web_scraper.mdx
flows/: access_run_context.py  conditionally_retry_with_delay.py  final_state_determination.py  force_out_of_memory.py  hello_world.py  local-concurrency-with-async.py  local-concurrency-with-task-runner.py  local_concurrency_with_async.py  local_concurrency_with_task_runner.py  native_python_script.py  return_custom_state.py  schedule_specific_parameters.py  update_flow_run_state_from_hook.py  update_flow_run_state_via_client.py  update_flow_run_tags.py  whoami.py
internal/: __init__.py  __main__.py  deploy.py  examples_test.py  generate_docs.py  generate_example_overview.py  generate_test_plan.py  readme.md  requirements.txt  run_example.py  summary.md  test_main.py  test_utils.py  utils.py
pal/: README.md
resources/: readme.md
scripts/: create-automation.py  create_automation.py  cross-workspace-flow-runs.py  cross_workspace_flow_runs.py  extract-with-dlt.py  extract_with_dlt.py  list-block-versions.py  list_block_type_versions.py  test-locally.sh  test-specific.sh  update_flow_run_states.py  (+2 more)
(+107 files in other folders)
