[project]
name = "prefect-examples"
version = "0.1.0"
description = "Examples of how to use Prefect"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "beautifulsoup4>=4.13.4",
    "dbt-duckdb>=1.9.3",
    "jupytext>=1.17.1",
    "pandas>=2.2.3",
    "prefect-dbt==0.7.0rc1",
    "prefect[dbt]>=3.0.0",
    "pytest>=8.3.5",
    "requests>=2.32.3",
]

[project.urls]
Code = "https://github.com/PrefectHQ/examples"

[project.scripts]
generate-docs = "internal.generate_docs:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
extend-exclude = ["internal/__init__.py"]

[tool.setuptools]
packages = ["internal"]
