[project]
name = "atproto-dashboard"
version = "0.1.0"
description = "ATProto (Bluesky) data pipeline with Prefect Assets"
readme = "README.md"
authors = [
    { name = "zzstoatzz", email = "thrast36@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "prefect>=3.0",
    "prefect-aws>=0.5.0",
    "atproto>=0.0.55",
    "dbt-duckdb>=1.9.0",
    "duckdb>=1.1.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
